...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="fur-bC-Qyc">
                                <rect key="frame" x="30" y="160.5" width="74" height="173"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Логин:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqt-2U-cWw">
                                        <rect key="frame" x="0.0" y="0.0" width="74" height="25"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="vk2-Xd-B44"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                                <color key="backgroundColor" white="1" alpha="0.74764554790000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="quz-p2-tEi"/>
                                                    <constraint firstAttribute="width" constant="120" id="ubE-LJ-IGm"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                <state key="normal" title="Вход"/>
                                                <connections>
                                                    <action selector="login:" destination="Pvl-6U-Her" eventType="touchUpInside" id="0ZA-jk-ncE"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4zA-C3-Ycl">
                                                <rect key="frame" x="0.0" y="75" width="120" height="45"/>
                                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="120" id="97x-1g-lBp"/>
                                                    <constraint firstAttribute="height" constant="45" id="Hy2-fj-Yt8"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                <state key="normal" title="Регистрация"/>
                                                <connections>
                                                    <action selector="registration:" destination="Pvl-6U-Her" eventType="touchUpInside" id="5hU-xf-KlS"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                            <navigationItem id="qwZ-rm-chK">
                                                <barButtonItem key="leftBarButtonItem" title="Back" id="LZr-jK-vht">
                                                    <connections>
                                                        <action selector="backButton:" destination="liN-iV-DkI" id="McR-sq-RFt"/>
                                                    </connections>
                                                </barButtonItem>
                                                <barButtonItem key="rightBarButtonItem" title="Done" id="s6e-ee-lfr">
                                                    <connections>
                                                        <action selector="doneButton:" destination="liN-iV-DkI" id="naj-da-ZtQ"/>
                                                    </connections>
                                                </barButtonItem>
                                            </navigationItem>
                                        </items>
...
