...

            if pass == password {
                let message = "Пользователь найден!"
                print(message)
                return ["result": 1, "message": message]
            } else {
                let error = "Пароль введен не верно!"
                print(error)
                return ["result": 0, "message": error]
            }
            
        } else {
            let error = "Пользователь не найден!"
            print(error)
            return ["result": 0, "message": error]
        }
    }
    
    
...
